<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_view"
    android:gravity="center">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/localize_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Localize"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/localizeOverview"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/localize_english_overview"
                android:textColor="@color/cometchat_grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/language"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_english"
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <RadioGroup
                    android:id="@+id/toggle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"

                    android:layout_weight="1"
                    android:background="@drawable/pink_out_line"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <RadioButton
                        android:id="@+id/english"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="English"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/hindi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/hindi"
                        android:textColor="@color/black" />
                </RadioGroup>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/curved_blue_button"
                android:text="@string/view_english"
                android:textColor="@color/white" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
